@@ -4,6 +4,9 @@
 --Version 3.6.4
   Added alias for fuelChest: enderRefuel
   Blacklist file parser now matches alpha-numeric characters and "_", but not commas :)
+  enderChest and fuelChest are no longer assignable in the written config because I don't check for their existence except through parameters
+  New Parameters:
+    -testParams [force]: Lists all the parameters you've selected and ends the program
 
 --Version 3.6.3
   Turtle will attempt to drop "junk" items in oreQuarry before moving to drop stuff off. If two or less stacks changed, will still do full drop
